--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,24 @@ input {
   box-sizing: border-box;
   font-size: 20px;
 }
+li {
+  font-size: 20px;
+}
+
+button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+input {
+  width: 300px;
+  padding: 10px 15px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-size: 20px;
+}
